<resources>
    <string name="app_name">PaySol</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Retype Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_face_capture">Register</string>
    <string name="camera_button_text">Capture</string>
    <!--<string name="string">String</string>-->
    <string name="error_field_empty">This field should not be empty</string>
    <string name="error_password_fields_mismatch">Password should match with Retyped Password</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_verification">VerificationActivity</string>

    <string-array name="currencies">
        <item>USD</item>
        <item>EUR</item>
        <item>PKR</item>
    </string-array>
    <string name="title_activity_verification_progress">VerificationProgress</string>

</resources>
