<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="siaimaging.paysol.activities.RegisterUserActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fistNameTextLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/prompt_first_name"
            android:ems="10"
            android:id="@+id/register_fist_name"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastNameTextLayout"
        android:layout_below="@+id/fistNameTextLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/prompt_last_name"
            android:ems="10"
            android:id="@+id/register_last_name"
            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailTextLayout"
        android:layout_below="@+id/lastNameTextLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <AutoCompleteTextView
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTextLayout"
        android:layout_below="@+id/emailTextLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:id="@+id/register_password"
            android:ems="10"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTextLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_password_again"
            android:id="@+id/register_password_again"
            android:ems="10"
            />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
